...
import UIKit

class ProductDetailViewController: UIViewController {

    let controller: MainController
    let product: ProductModel?
    let imageView = UIImageView()
    let titleLabel = UILabel()
    let brandLabel = UILabel()
    let discountLabel = UILabel()
    let descriptionLabel = UILabel()
    var priceButton: UIButton = UIButton()
    let categoryLabel = UILabel()
    private let padding: CGFloat = 10
...
